# qr-pc-renamer

./: .gitignore  Cargo.toml  README.md  run_renamer_qr.bat
src/: main.rs  pc_rename.rs  qr_scanner.rs
完成版/: run_renamer_qr.bat
